--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -5,6 +5,10 @@
   rel="stylesheet"
 />
 <link
+  href="https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@300;400;500&display=swap"
+  rel="stylesheet"
+/>
+<link
   rel="stylesheet"
   href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;300;400;500;700;900&display=swap"
 />
